# nonebot-plugin-exchangerate

./: README.md  pyproject.toml
nonebot_plugin_exchangerate/: __init__.py  config.py  exchangerate.py
